--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,15 @@
-Django
-Pillow
-python-decouple
+asgiref==3.5.0
+backports.zoneinfo==0.2.1
+click==7.1.2
+click-didyoumean==0.3.0
+cls-client==1.4.0
+dj-database-url==0.5.0
+Django==4.0.4
+django-heroku==0.3.1
+gunicorn==20.1.0
+p==1.3.0
+Pillow==9.1.0
+psycopg2==2.9.3
+python-decouple==3.6
+sqlparse==0.4.2
+whitenoise==6.2.0
