--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,12 @@ Django==4.0.4
 django-heroku==0.3.1
 gunicorn==20.1.0
 p==1.3.0
+p5py==1.0.0
+pep517==0.12.0
 Pillow==9.1.0
+pkg_resources==0.0.0
 psycopg2==2.9.3
 python-decouple==3.6
 sqlparse==0.4.2
+tomli==2.0.1
 whitenoise==6.2.0
