--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,9 @@ backports.zoneinfo==0.2.1
 click==7.1.2
 click-didyoumean==0.3.0
 cls-client==1.4.0
+config==0.5.1
 dj-database-url==0.5.0
-Django==4.0.4
+Django==4.0.6
 django-heroku==0.3.1
 gunicorn==20.1.0
 p==1.3.0
